--- a/src/scss/_content-hub.scss
+++ b/src/scss/_content-hub.scss
@@ -14,7 +14,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 1100px;
+  padding: 50% 0;
   z-index: 0;
   position: relative;
 
@@ -31,6 +31,9 @@
   }
 
   .content-gradient {
+    position: absolute;
+    bottom: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background: -webkit-linear-gradient(30deg, #ab3348 0%, rgba(255, 255, 255, 0) 60%);
