--- a/src/scss/_counter-map.scss
+++ b/src/scss/_counter-map.scss
@@ -14,7 +14,7 @@
 
   .odometer,
   .counter_numbers .euro-sign {
-    font-size: 5em;
+    font-size: 4.5em;
   }
 
   .counter_map_wrapper {
