--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -27,13 +27,13 @@
   background-position: center 85px;
   background-size: 150vw;
   background-repeat: no-repeat;
-  margin: 0 -1.875em;
-  padding: 0 0 150px;
+  margin: 0 -1.875em -2em -1.875em;
+  padding: 0 26px 50px 26px;
 }
 
 .header_dwb .logo {
-  width: 60%;
-  margin: 50px;
+  width: 100%;
+  margin: 40px auto 20px auto;
   -webkit-filter: grayscale(1) drop-shadow(-5px 15px 20px rgba(0, 0, 0, 0.1));
   filter: grayscale(1) drop-shadow(-5px 15px 20px rgba(0, 0, 0, 0.1));
 }
