--- a/src/scss/_olapic_ugc.scss
+++ b/src/scss/_olapic_ugc.scss
@@ -4,9 +4,18 @@
   background-size: contain;
 }
 
+#olapic-images {
+  max-width: 100%;
+  padding: 0 1.8em;
+}
+
 .olapic_img {
-  width: 60%;
-  margin: 2em 1.3em;
+  width: 100%;
+  margin-bottom: 1.8em;
+}
+
+.olapic_img:last-of-type {
+  margin-bottom: 0;
 }
 
 .olapic_legend {
